longhorn-monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn
    component: manager
  name: longhorn-manager-metrics
  namespace: longhorn-system
spec:
  ports:
  - name: metrics
    port: 9500
    protocol: TCP
    targetPort: metrics
  selector:
    app: longhorn
    component: manager
  type: ClusterIP
