grafana-ingress.yaml
# grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    # Аннотации для корректной работы с ingress-nginx
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana.k8s-ingress1.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 80
