test-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: k8s-ingress1.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-web-app-service
            port:
              number: 80
