test-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-web-app
  labels:
    app: test-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-web-app
  template:
    metadata:
      labels:
        app: test-web-app
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: test-web-app-service
spec:
  selector:
    app: test-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-ingress1.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-web-app-service
            port:
              number: 80
